@startuml

entity FATO_VENDA {
  +id_venda : INTEGER
  id_tempo : INTEGER
  id_cliente : INTEGER
  id_funcionario : INTEGER
  id_carro : INTEGER
  valor_total : REAL
}

entity DIM_CLIENTE {
  +id_cliente : INTEGER
  nome : TEXT
  cpf : TEXT
  telefone : TEXT
  endereco : TEXT
}

entity DIM_CARRO {
  +id_carro : INTEGER
  modelo : TEXT
  marca : TEXT
  ano : INTEGER
  cor : TEXT
  preco : REAL
  placa : TEXT
}

entity DIM_FUNCIONARIO {
  +id_funcionario : INTEGER
  nome : TEXT
  cargo : TEXT
  telefone : TEXT
}

entity DIM_TEMPO {
  +id_tempo : INTEGER
  data_venda : DATE
  ano : INTEGER
  mes : INTEGER
  dia : INTEGER
  dia_semana : TEXT
}

FATO_VENDA }o--|| DIM_CLIENTE : cliente
FATO_VENDA }o--|| DIM_FUNCIONARIO : funcionario
FATO_VENDA }o--|| DIM_CARRO : carro
FATO_VENDA }o--|| DIM_TEMPO : tempo

@enduml
